@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "21.02.2012"
-#define TIME_STR "23:11:02"
-#define SUB_VERS 5515-erez
-#define SVN_VERS "er9x-r723"
-#define MOD_VERS "   "
+#define DATE_STR "22.02.2012"
+#define TIME_STR "21:09:03"
+#define SUB_VERS 5516-Mike
+#define SVN_VERS "er9x-r729"
+#define MOD_VERS "FRSKY NT  "
